font size smaller

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -49,14 +49,15 @@
 }
 
 .page__content {
-
   h2 {
     padding-bottom: 0.5em;
     border-bottom: 1px solid $border-color;
   }
 
-  p, li, dl {
-    font-size: 1em;
+  p,
+  li,
+  dl {
+    font-size: 0.8em;
   }
 
   /* paragraph indents */
@@ -220,7 +221,6 @@
   text-transform: uppercase;
 }
 
-
 /*
    Page meta
    ========================================================================== */
@@ -245,7 +245,6 @@
   font-size: $type-size-6;
   text-transform: uppercase;
 }
-
 
 /*
    Page taxonomy
@@ -275,7 +274,6 @@
     color: $link-color-hover;
   }
 }
-
 
 /*
    Comments
@@ -371,7 +369,6 @@
     text-decoration: none;
   }
 }
-
 
 /*
    Related
