--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -6,7 +6,7 @@
    Typography
    ========================================================================== */
 
-$doc-font-size: 14;
+$doc-font-size: 16;
 
 /* paragraph indention */
 $paragraph-indent: false; // true, false (default)
@@ -136,7 +136,7 @@ $susy: (
   //   color: blue,
   //   output: overlay,
   //   toggle: top right,
-  // ),,,
+  // ),,
 );
 
 /*
