--- a/_sass/_reset.scss
+++ b/_sass/_reset.scss
@@ -11,7 +11,7 @@ html {
   font-size: 16px;
 
   @include breakpoint($medium) {
-    font-size: 14px;
+    font-size: 14px; // this is the place to change all font size
   }
 
   -webkit-text-size-adjust: 100%;
