--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -4,13 +4,17 @@
 {% include /comments-providers/scripts.html %}
 
 <!-- Mermaid support -->
-<script src="https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/mermaid@11.6.0/dist/mermaid.min.js"></script>
 <script>
   document.addEventListener("DOMContentLoaded", function () {
     mermaid.initialize({
       startOnLoad: true,
       theme: "default",
-      securityLevel: "loose",
+      flowchart: {
+        useMaxWidth: true,
+        htmlLabels: true
+      },
+      securityLevel: 'loose'
     });
   });
 </script>
